--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,11 @@ body{
 .top-20{
     margin-top: 20px;
 }
+
+footer {
+    text-align: center;
+    padding: 3px;
+    background-color: rgb(94, 91, 89);
+    color: white;
+    margin-top:5%;
+  }
